# RecommenderSystem

./: .dockerignore  .env  .env.example  .gitignore  BASELINE_COMPARISON.md  Dockerfile  EVALUATION.md  FAIRNESS_REPORT.md  Makefile  README.md  container-definition.json  iam-policy.json  pyproject.toml  recommender_blueprint.html  requirements.txt  serving_context.pkl  task-definition.json  trained_model.pth  trained_model_movielens.pth
.github/workflows/: ci.yml
api/: app.py
configs/: config.yaml
configs/experiments/: dlrm_vs_baseline.yaml
data/: preprocessing.py
deploy/: container-definition.json  iam-policy.json  task-definition.json
docker/: Dockerfile
docs/: BASELINE_COMPARISON.md  CLASSICAL_COMPARISON.md  DATA_CARD.md  DOCUMENTATION.md
lightning_logs/checkpoints/: dlrm-epoch=02-train_loss=0.67-v1.ckpt  dlrm-epoch=02-train_loss=0.67.ckpt  dlrm-epoch=02-train_loss=0.68-v13.ckpt  dlrm-epoch=02-train_loss=0.68.ckpt  dlrm-epoch=03-train_loss=0.66.ckpt  last-v27.ckpt  (+6 more)
models/: classical.py  dlrm.onnx  dlrm.onnx.data  dlrm.py
reports/: model_comparison.json
scripts/: baseline_comparison.py  benchmark_inference.py  build_for_deploy.py  classical_baselines.py  download_data.py  drift_detection.py  experiment_framework.py  export_onnx.py  fairness_analysis.py  inference.py  netflix_scaler.pkl  preprocessing.py  retrain_and_compare.py  run_experiment.py  train.py  train_movielens.py  type_encoder.pkl
tests/: crash_test.py  test_api_integration.py  test_model.py  test_upgrades.py  test_utils.py  test_validation.py
virtual/: pyvenv.cfg
(+14 files in other folders)
